# app/Http/Requests/API/CreateLogSignaturAPIRequest.php
@@ -1,29 +1,0 @@
-<?php
-
-namespace App\Http\Requests\API;
-
-use App\Models\LogSignatur;
-use InfyOm\Generator\Request\APIRequest;
-
-class CreateLogSignaturAPIRequest extends APIRequest
-{
-    /**
-     * Determine if the user is authorized to make this request.
-     *
-     * @return bool
-     */
-    public function authorize()
-    {
-        return true;
-    }
-
-    /**
-     * Get the validation rules that apply to the request.
-     *
-     * @return array
-     */
-    public function rules()
-    {
-        return LogSignatur::$rules;
-    }
-}
