# app/Models/LogSignatur.php
@@ -1,135 +1,0 @@
-<?php
-
-namespace App\Models;
-
-use Illuminate\Database\Eloquent\Model;
-use Illuminate\Database\Eloquent\SoftDeletes;
-use Illuminate\Database\Eloquent\Factories\HasFactory;
-
-/**
- * @OA\Schema(
- *      schema="LogSignatur",
- *      required={"firm_id", "id_xml", "document_type", "date_time"},
- *      @OA\Property(
- *          property="id",
- *          description="id",
- *          readOnly=true,
- *          nullable=false,
- *          type="integer",
- *          format="int32"
- *      ),
- *      @OA\Property(
- *          property="firm_id",
- *          description="firm_id",
- *          readOnly=false,
- *          nullable=false,
- *          type="integer",
- *          format="int32"
- *      ),
- *      @OA\Property(
- *          property="id_xml",
- *          description="id_xml",
- *          readOnly=false,
- *          nullable=false,
- *          type="string"
- *      ),
- *      @OA\Property(
- *          property="document_type",
- *          description="document_type",
- *          readOnly=false,
- *          nullable=false,
- *          type="string"
- *      ),
- *      @OA\Property(
- *          property="date_time",
- *          description="date_time",
- *          readOnly=false,
- *          nullable=false,
- *          type="string",
- *          format="date-time"
- *      ),
- *      @OA\Property(
- *          property="created_at",
- *          description="created_at",
- *          readOnly=true,
- *          nullable=true,
- *          type="string",
- *          format="date-time"
- *      ),
- *      @OA\Property(
- *          property="updated_at",
- *          description="updated_at",
- *          readOnly=true,
- *          nullable=true,
- *          type="string",
- *          format="date-time"
- *      ),
- *      @OA\Property(
- *          property="deleted_at",
- *          description="deleted_at",
- *          readOnly=true,
- *          nullable=true,
- *          type="string",
- *          format="date-time"
- *      )
- * )
- */
-class LogSignatur extends Model
-{
-    use SoftDeletes;
-
-    use HasFactory;
-
-    public $table = 'log_signatures';
-    
-    const CREATED_AT = 'created_at';
-    const UPDATED_AT = 'updated_at';
-
-
-    protected $dates = ['deleted_at'];
-
-
-
-    public $fillable = [
-        'firm_id',
-        'id_xml',
-        'document_type',
-        'date_time'
-    ];
-
-    /**
-     * The attributes that should be casted to native types.
-     *
-     * @var array
-     */
-    protected $casts = [
-        'id' => 'integer',
-        'firm_id' => 'integer',
-        'id_xml' => 'string',
-        'document_type' => 'string',
-        'date_time' => 'datetime'
-    ];
-
-    /**
-     * Validation rules
-     *
-     * @var array
-     */
-    public static $rules = [
-        'firm_id' => 'required',
-        'id_xml' => 'required|string|max:255',
-        'document_type' => 'required|string|max:255',
-        'date_time' => 'required',
-        'created_at' => 'nullable',
-        'updated_at' => 'nullable',
-        'deleted_at' => 'nullable'
-    ];
-
-    /**
-     * @return \Illuminate\Database\Eloquent\Relations\BelongsTo
-     **/
-    public function firm()
-    {
-        return $this->belongsTo(\App\Models\Firm::class, 'firm_id');
-    }
-}
