# storage/api-docs/api-docs.json
@@ -170,171 +170,6 @@
                 ]
             }
         },
-        "/api/logSignaturs": {
-            "get": {
-                "tags": [
-                    "LogSignatur"
-                ],
-                "summary": "getLogSignaturList",
-                "description": "Get all LogSignaturs",
-                "operationId": "bb7be62f5bb6b8d129ca777f5b1ee436",
-                "responses": {
-                    "200": {
-                        "description": "successful operation"
-                    }
-                },
-                "security": [
-                    {
-                        "sanctum": []
-                    }
-                ]
-            },
-            "post": {
-                "tags": [
-                    "LogSignatur"
-                ],
-                "summary": "createLogSignatur",
-                "description": "Create LogSignatur",
-                "operationId": "7f8799f8e467fb9a240d56039081e20f",
-                "requestBody": {
-                    "required": true,
-                    "content": {
-                        "application/x-www-form-urlencoded": {
-                            "schema": {
-                                "required": [
-                                    ""
-                                ],
-                                "properties": {
-                                    "name": {
-                                        "description": "desc",
-                                        "type": "string"
-                                    }
-                                },
-                                "type": "object"
-                            }
-                        }
-                    }
-                },
-                "responses": {
-                    "200": {
-                        "description": "successful operation"
-                    }
-                },
-                "security": [
-                    {
-                        "sanctum": []
-                    }
-                ]
-            }
-        },
-        "/api/logSignaturs/{id}": {
-            "get": {
-                "tags": [
-                    "LogSignatur"
-                ],
-                "summary": "getLogSignaturItem",
-                "description": "Get LogSignatur",
-                "operationId": "9f30effea4f6ae72d3361c9854e23c52",
-                "parameters": [
-                    {
-                        "name": "id",
-                        "in": "path",
-                        "description": "id of LogSignatur",
-                        "required": true,
-                        "schema": {
-                            "type": "integer"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "successful operation"
-                    }
-                },
-                "security": [
-                    {
-                        "sanctum": []
-                    }
-                ]
-            },
-            "put": {
-                "tags": [
-                    "LogSignatur"
-                ],
-                "summary": "updateLogSignatur",
-                "description": "Update LogSignatur",
-                "operationId": "267a375a7b4644fa7f559766aa08e636",
-                "parameters": [
-                    {
-                        "name": "id",
-                        "in": "path",
-                        "description": "id of LogSignatur",
-                        "required": true,
-                        "schema": {
-                            "type": "integer"
-                        }
-                    }
-                ],
-                "requestBody": {
-                    "required": true,
-                    "content": {
-                        "application/x-www-form-urlencoded": {
-                            "schema": {
-                                "required": [
-                                    ""
-                                ],
-                                "properties": {
-                                    "name": {
-                                        "description": "desc",
-                                        "type": "string"
-                                    }
-                                },
-                                "type": "object"
-                            }
-                        }
-                    }
-                },
-                "responses": {
-                    "200": {
-                        "description": "successful operation"
-                    }
-                },
-                "security": [
-                    {
-                        "sanctum": []
-                    }
-                ]
-            },
-            "delete": {
-                "tags": [
-                    "LogSignatur"
-                ],
-                "summary": "deleteLogSignatur",
-                "description": "Delete LogSignatur",
-                "operationId": "3d834730312dd40b7ad798630605a752",
-                "parameters": [
-                    {
-                        "name": "id",
-                        "in": "path",
-                        "description": "id of LogSignatur",
-                        "required": true,
-                        "schema": {
-                            "type": "integer"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "successful operation"
-                    }
-                },
-                "security": [
-                    {
-                        "sanctum": []
-                    }
-                ]
-            }
-        },
         "/api/organizations": {
             "get": {
                 "tags": [
@@ -881,58 +716,6 @@
             "Firm": {
                 "required": [
                     "organization_id",
-                    "sistem",
-                    "status",
-                    "count"
-                ],
-                "properties": {
-                    "id": {
-                        "description": "id",
-                        "type": "integer",
-                        "format": "int32",
-                        "readOnly": true,
-                        "nullable": false
-                    },
-                    "organization_id": {
-                        "description": "organization_id",
-                        "type": "integer",
-                        "format": "int32",
-                        "readOnly": false,
-                        "nullable": false
-                    },
-                    "sistem": {
-                        "description": "sistem",
-                        "type": "string",
-                        "readOnly": false,
-                        "nullable": false
-                    },
-                    "count": {
-                        "description": "count",
-                        "type": "integer",
-                        "format": "int32",
-                        "readOnly": false,
-                        "nullable": false
-                    },
-                    "created_at": {
-                        "description": "created_at",
-                        "type": "string",
-                        "format": "date-time",
-                        "readOnly": true,
-                        "nullable": true
-                    },
-                    "updated_at": {
-                        "description": "updated_at",
-                        "type": "string",
-                        "format": "date-time",
-                        "readOnly": true,
-                        "nullable": true
-                    }
-                },
-                "type": "object"
-            },
-            "LogSignatur": {
-                "required": [
-                    "firm_id",
                     "id_xml",
                     "document_type",
                     "date_time"
@@ -945,8 +728,8 @@
                         "readOnly": true,
                         "nullable": false
                     },
-                    "firm_id": {
-                        "description": "firm_id",
+                    "organization_id": {
+                        "description": "organization_id",
                         "type": "integer",
                         "format": "int32",
                         "readOnly": false,
